auth : [AD] login-register

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,6 +46,11 @@
     border-top-right-radius: 0;
 }
 
+.bi {
+    vertical-align: -.125em;
+    fill: currentColor;
+}
+
 .btn-bd-primary {
     --bd-violet-bg: #712cf9;
     --bd-violet-rgb: 112.520718, 44.062154, 249.437846;
@@ -61,6 +66,10 @@
     --bs-btn-active-color: var(--bs-btn-hover-color);
     --bs-btn-active-bg: #5a23c8;
     --bs-btn-active-border-color: #5a23c8;
+}
+
+#button:hover {
+    background-color: transparent;
 }
 
 .bd-mode-toggle {
